Fixed perspective decoration issue without using z-index

--- a/src/components/PerspectiveDecoration/PerspectiveDecoration.module.css
+++ b/src/components/PerspectiveDecoration/PerspectiveDecoration.module.css
@@ -1,6 +1,7 @@
 .perspectiveDecoration {
-    position: sticky;
+    height: 40%;
+    width: 100%;
+    position: fixed;
     bottom: 0px;
     background-color: hsl(195deg, 20%, 86%);
-    height: 40%;
 }
